--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
+    "react-radio-group": "^2.2.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
