--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
     "react-radio-group": "^2.2.0",
+    "react-slick": "^0.9.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
